--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.3"
+    "express-handlebars": "^7.1.3",
+    "sass": "^1.77.6"
   }
 }
